style/header.css
@import url(../root.css);

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
header {
  background-color: #1b1d1f;
  width: 100%;
  height: 100vh;
}
.banner {
  position: relative;
  width: 78%;
  height: 26.8vh;
  overflow: hidden; /*FIRST OVERFLOW*/
  margin: 0 auto;
  z-index: 0;
}

.carousel {
  display: flex;
  width: 500%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  transition: transform 0.5s ease-in-out;
  z-index: 0;
}

.slide {
  width: 20%;
  height: 100%;
  position: relative;
  border-radius: 35px;
}
.slide1 {
  background: linear-gradient(
    114.79deg,
    rgb(192, 64, 252) -17.76%,
    rgb(75, 60, 255) 99.88%
  );
  border-radius: 35px;
  height: 100%;
  width: 100%;
}
.slide2 {
  background: linear-gradient(
    114.79deg,
    rgb(192, 64, 252) -17.76%,
    rgb(75, 60, 255) 99.88%
  );
  border-radius: 35px;
  height: 100%;
  width: 100%;
}
.slide3 {
  background: linear-gradient(
    114.79deg,
    rgb(192, 64, 252) -17.76%,
    rgb(75, 60, 255) 99.88%
  );
  border-radius: 35px;
  height: 100%;
  width: 100%;
}
.slide4 {
  background: linear-gradient(
    114.79deg,
    rgb(192, 64, 252) -17.76%,
    rgb(75, 60, 255) 99.88%
  );
  border-radius: 35px;
  height: 100%;
  width: 100%;
}
.slide5 {
  background: linear-gradient(
    114.79deg,
    rgb(192, 64, 252) -17.76%,
    rgb(75, 60, 255) 99.88%
  );
  border-radius: 35px;
  height: 100%;
  width: 100%;
}
/* GENERAL SETTINGS */

.slide .caption {
  color: #fff;
}

#purple-webkit {
  font-weight: 900;
  background: linear-gradient(
    166.02deg,
    rgb(255, 178, 55) -5.1%,
    rgb(255, 235, 55) 75.24%
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke: 0.18rem rgb(101, 50, 205);
}

/* SLIDE 1 */

.slide1 .caption {
  position: absolute;
  top: 10%;
  left: 0%;
  transform: translate(5%, 0%);
}
.slide1 .caption h2 {
  font-size: 40px;
}
.slide1 .caption p {
  font-size: 25px;
  font-weight: 500;
}
#space-station {
  width: 53%;
  position: sticky;
  top: 0%;
  left: 48%;
  transform: translate(0%, 0%);
  object-fit: contain;
  border-radius: 35px;
}
#space-bunny {
  width: 20%;
  position: absolute;
  top: -20%;
  left: 65%;
  transform: translate(25%, 0%);
  animation: fluttua 7s ease-in-out infinite;
}

/* SLIDE 2 */

.slide2 .caption {
  position: absolute;
  top: 10%;
  left: 0%;
  transform: translate(5%, 0%);
}
.slide2 .caption h2 {
  font-size: 40px;
  font-weight: 500;
}
.slide2 .caption p {
  font-size: 20px;
}
#slide2-bunny {
  width: 27%;
  position: absolute;
  top: -18%;
  left: 65%;
  transform: translate(25%, 0%);
}

/* SLIDE 3*/

.slide3 .caption {
  position: absolute;
  top: 10%;
  left: 1%;
  transform: translate(5%, 0%);
}
.slide3 .caption h2 {
  font-size: 40px;
  font-weight: 500;
  color: #ffffff;
  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1),
    1px 1px 1px rgba(0, 0, 0, 0.5);
}

#baloon-bunny {
  /* coniglietto blu */
  width: 26%;
  position: absolute;
  top: -30%;
  left: 73%;
  transform: translate(25%, 0%);
  animation: fluttua 6s ease-in-out infinite;
  z-index: 100;
}
@keyframes fluttua {
  0% {
    transform: translate(0, 0);
  }
  50% {
    transform: translate(-3px, 5px);
  }
  100% {
    transform: translate(0, 0);
  }
}

#coin-bottom {
  position: absolute;
  top: 57.4%;
  left: 50%;
  transform: translate(-140%, 0%);
  width: 18%;
}
#coin-top {
  position: absolute;
  top: 0%;
  left: 45%;
  transform: translate(-20%, 0%);
  width: 13%;
}

.framework-container {
  position: absolute;
  top: 50%;
  left: 65%;
  transform: translate(0%, -50%);
  width: 15%;
}
.framework-container img {
  width: 82%;
}
.framework-light {
  content: "";
  background-image: linear-gradient(
    90deg,
    #ccc 0px,
    rgba(229, 229, 229, 0.25) 40px,
    rgba(204, 204, 204, 0.082) 80px
  );
  position: absolute;
  width: 82%;
  height: 93%;
  background-position: 100% 0;
  background-size: 300%;
  animation: fadeInOut 1.4s linear infinite;
  animation-play-state: running;
}
@keyframes fadeInOut {
  to {
    background-position: -100% 0;
  }
}

/* animazione compare-scompare */

#star1,
#star2 {
  opacity: 1;
  animation-name: fade-out-in;
  animation-iteration-count: infinite;
}
@keyframes fade-out-in {
  0% {
    opacity: 1;
  }
  25% {
    opacity: 0.5;
  }
  50% {
    opacity: 0;
  }
  75% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}
#star1 {
  position: absolute;
  top: 50%;
  left: 40%;
  transform: translate(65%, -30%);
  width: 4.8%;
  animation-duration: 3.5s;
}
#star2 {
  position: absolute;
  top: 70%;
  left: 58%;
  transform: translate(0%, -30%);
  width: 4.8%;
  animation-duration: 3s;
}

/* SLIDE 4 */

.slide4 .caption h2 {
  font-size: 40px;
  font-weight: 500;
  position: absolute;
  top: 40%;
  left: 2%;
  transform: translate(0%, -50%);
  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1),
    1px 1px 1px rgba(0, 0, 0, 0.5);
}

#pancake-logo {
  width: 11%;
  position: absolute;
  top: 20%;
  left: 2%;
  transform: translate(0%, -50%);
}

#gm-bunny {
  width: 88%;
  position: absolute;
  top: 50%;
  left: 12%;
  transform: translate(0%, -50%);
}

/* SLIDE 5 */

.slide5 .caption {
  position: absolute;
  top: 40%;
  left: 2.5%;
  transform: translate(0%, -50%);
}
.slide5 .caption h2 {
  font-size: 40px;
  text-shadow: -1px -1px 1px #492286, 1px 1px 1px #492286, 2px 2px 2px #492286;
  margin-bottom: 20px;
}
.slide5 .caption p {
  font-weight: 500;
  font-size: 24px;
  background: linear-gradient(
    166.02deg,
    rgb(230, 155, 35) -5.1%,
    rgb(237, 216, 27) 95.24%
  );
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
#trading-bunny {
  width: 35%;
  position: absolute;
  top: 50%;
  left: 65%;
  transform: translate(0%, -59%);
}

/* BUTTONS */

.head-btn {
  background-color: var(--button-color);
  color: #ffffff;
  padding: 10px 20px;
  border-radius: 15px;
  font-size: 16px;
  font-weight: 500;
  transition: all 0.2s ease-in-out;
  text-decoration: none;
  position: absolute;
  top: 60%;
  left: 5%;
  transform: translate(-25%, 10%);
}
.head-btn2 {
  background-color: white;
  color: var(--button-color);
  padding: 10px 20px;
  border-radius: 15px;
  font-size: 16px;
  font-weight: 500;
  transition: all 0.2s ease-in-out;
  text-decoration: none;
  position: absolute;
  top: 60%;
  left: 15%;
  transform: translate(-35%, 10%);
}
.head-btn:hover,
.head-btn2:hover {
  opacity: 0.8;
  cursor: pointer;
}

.indicators {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  justify-content: center;
  align-items: center;
}
.indicator {
  width: 25px;
  height: 8px;
  background-color: rgba(255, 255, 255, 0.2);
  cursor: pointer;
}
.indicator.active {
  width: 24px;
  height: 8px;
  background-color: #ffffff;
}
.indicator:first-child {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}
.indicator:last-child {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

